<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/candid_setting_background_color"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_setting_preview_margin_bottom"
        android:layout_marginTop="@dimen/layout_setting_preview_margin_top"
        android:background="@drawable/selector_view_display"
        android:layout_gravity="center"
        android:focusable="true"
        android:padding="2dp" >

        <FrameLayout
            android:id="@+id/fl_candid_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_candid_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_setting_header_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_setting_group_header_margin_top"
                android:background="@color/candid_setting_group_header_background_color"
                android:gravity="center"
                android:padding="@dimen/layout_setting_group_header_padding"
                android:text="@string/candid_setting_group_header_general"
                android:textColor="@color/candid_setting_text_color"
                android:focusable="true"
                android:textSize="@dimen/layout_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding" >

                <TextView
                    android:id="@+id/tv_setting_preview_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/layout_padding"
                    android:text="@string/candid_setting_preview_size"
                    android:textColor="@color/candid_setting_text_color"
                    android:textSize="@dimen/layout_text_size" />

                <SeekBar
                    android:id="@+id/sb_setting_preview_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    android:max="7"
                    android:paddingLeft="@dimen/layout_padding_seekbar_left_right"
                    android:paddingRight="@dimen/layout_padding_seekbar_left_right"
                    android:progress="0"
                    android:progressDrawable="@drawable/widget_seekbar_progress"
                    android:secondaryProgress="0"
                    android:thumb="@drawable/gs_seekbar_thumb" />

                <LinearLayout
                    android:id="@+id/ll_setting_init_zoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/tv_setting_init_zoom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="@dimen/layout_padding"
                        android:text="@string/candid_setting_initial_zoom"
                        android:textColor="@color/candid_setting_text_color"
                        android:textSize="@dimen/layout_text_size" />

                    <SeekBar
                        android:id="@+id/sb_setting_init_zoom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_padding"
                        android:max="2"
                        android:paddingLeft="@dimen/layout_padding_seekbar_left_right"
                        android:paddingRight="@dimen/layout_padding_seekbar_left_right"
                        android:progress="0"
                        android:progressDrawable="@drawable/widget_seekbar_progress"
                        android:secondaryProgress="0"
                        android:thumb="@drawable/gs_seekbar_thumb" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_setting_capture_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/layout_padding"
                    android:text="@string/candid_setting_capture_path"
                    android:textColor="@color/candid_setting_text_color"
                    android:textSize="@dimen/layout_text_size" />

                <EditText
                    android:id="@+id/et_setting_capture_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    android:layout_marginLeft="@dimen/layout_padding"
                    android:layout_marginRight="@dimen/layout_padding"
                    android:background="@drawable/selector_edittext"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/layout_padding"
                    android:textColor="@color/candid_setting_edittext_color"
                    android:textSize="@dimen/layout_text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_setting_header_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_setting_group_header_margin_top"
                android:background="@color/candid_setting_group_header_background_color"
                android:gravity="center"
                android:padding="@dimen/layout_setting_group_header_padding"
                android:text="@string/candid_setting_group_header_control"
                android:textColor="@color/candid_setting_text_color"
                android:textSize="@dimen/layout_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding" >

                <ListView
                    android:id="@+id/lv_setting_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:scrollbars="none" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_setting_header_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_setting_group_header_margin_top"
                android:background="@color/candid_setting_group_header_background_color"
                android:gravity="center"
                android:padding="@dimen/layout_setting_group_header_padding"
                android:text="@string/candid_setting_group_header_about"
                android:textColor="@color/candid_setting_text_color"
                android:textSize="@dimen/layout_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding" >

                <ListView
                    android:id="@+id/lv_setting_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:scrollbars="none" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>